tests/contract_testcases/substrate/expressions/test_cast_errors_01.sol
contract test {
            function foobar(uint foo, int bar) public returns (bool) {
                return (foo < bar);
            }
        }
// ---- Expect: diagnostics ----
// error: 3:25-28: implicit conversion would change sign from uint256 to int256
